syntax ="proto3";

package user;

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    string company = 4;
    string password = 5;
}

message Request{}

message Repsonse {
    User user = 1;
    repeated User users = 2;
    repeated Error errors = 3;
}


message Error {
    int32 code = 1;
    string description = 2;
}

message Token {
    string token = 1;
    bool valid = 2;
    repeated Error errors = 3;
}


service UserService {
    //Уметь регистрировать/создавать пользователя
    rpc Create(User) returns (Repsonse) {}
    //Получать информацию про какого-то пользователя
    rpc Get(User) returns (Repsonse) {}
    //Получить всех пользователей
    rpc GetAll(Request) returns (Repsonse) {}


    //Аутентифицрование и валидация
    rpc Auth(User) returns (Token) {}
    rpc ValidateToken(Token) returns (Token) {}
}